# ccmux

./: .gitignore  Cargo.toml  README.md
.claude/skills/ccmux-controller/: SKILL.md
.claude/skills/ccmux-worker/: SKILL.md
docs/: TODO.md
docs/superpowers/plans/: 2025-03-26-interactive-pty-control.md
docs/superpowers/specs/: 2025-03-26-interactive-pty-control-design.md
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs  state.rs
src/server/: bypass_exec.rs  bypass_session.rs  daemon.rs  interaction_detector.rs  mod.rs  pty.rs  screen_buffer.rs  session.rs  status_file.rs  strategy.rs
tests/: bypass_session_test.rs  client_test.rs  config_test.rs  integration_test.rs  interaction_detector_test.rs  interaction_test.rs  output_buffer_test.rs  protocol_test.rs  pty_test.rs  screen_buffer_test.rs  session_test.rs  state_test.rs  strategy_test.rs
