[package]
name = "ccmux"
version = "0.1.0"
edition = "2021"
description = "Claude Code session manager"
authors = ["ccmux contributors"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
nix = { version = "0.29", features = ["fs", "process", "term", "ioctl", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
which = "6.0"
scopeguard = "1.2"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "ccmux"
path = "src/main.rs"

[[bin]]
name = "ccmuxd"
path = "src/bin/ccmuxd.rs"
